k8s/ingress/node-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  annotations:
    # kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - mynodeapp.com
    secretName: tls-nodeapp
  rules:
    - host: mynodeapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app-service
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-ingress
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: secret-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication required"
spec:
  rules:
    - host: mynodeapp.com
      http:
        paths:
          - path: /private/
            pathType: Prefix
            backend:
              service:
                name: node-app-service
                port:
                  number: 3000
